--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
           </li>
         </ul>
       </nav>
+      <div class="container">
+        <div class="home__content">
+          <span class="home__question-text">SO, YOU WANT TO TRAVEL TO</span>
+          <h1 class="home__heading">SPACE</h1>
+          <p class="home__text">
+            Let’s face it; if you want to go to space, you might as well
+            genuinely go to outer space and not hover kind of on the edge of it.
+            Well sit back, and relax because we’ll give you a truly out of this
+            world experience!
+          </p>
+        </div>
+        <div class="home__explore-ellipse">
+            <span>EXPLORE</span>
+        </div>
+      </div>
     </div>
   </body>
 </html>
