--- a/crew.html
+++ b/crew.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
   </head>
   <body>
     <div class="crew">
@@ -33,6 +37,90 @@
           </li>
         </ul>
       </nav>
+      <div class="container">
+        <div class="swiper mySwiper">
+          <span>02 Meet your crew</span>
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="container">
+                <div class="crew__content">
+                  <h3 class="crew__commander-text">Commander</h3>
+                  <h1 class="crew__heading">Douglas Hurley</h1>
+                  <p class="crew__text">
+                    Douglas Gerald Hurley is an American engineer, former Marine
+                    Corps pilot and former NASA astronaut. He launched into
+                    space for the third time as commander of Crew Dragon Demo-2.
+                  </p>
+                </div>
+                <div class="crew__imgSide">
+                  <img src="./assets/old.png" alt="old" />
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="container">
+                <div class="crew__content">
+                  <h3 class="crew__commander-text">Commander</h3>
+                  <h1 class="crew__heading">Douglas Hurley</h1>
+                  <p class="crew__text">
+                    Douglas Gerald Hurley is an American engineer, former Marine
+                    Corps pilot and former NASA astronaut. He launched into
+                    space for the third time as commander of Crew Dragon Demo-2.
+                  </p>
+                </div>
+                <div class="crew__imgSide">
+                  <img src="./assets/mark.png" alt="old" />
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="container">
+                <div class="crew__content">
+                  <h3 class="crew__commander-text">Commander</h3>
+                  <h1 class="crew__heading">Douglas Hurley</h1>
+                  <p class="crew__text">
+                    Douglas Gerald Hurley is an American engineer, former Marine
+                    Corps pilot and former NASA astronaut. He launched into
+                    space for the third time as commander of Crew Dragon Demo-2.
+                  </p>
+                </div>
+                <div class="crew__imgSide">
+                  <img src="./assets/victor.png" alt="old" />
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="container">
+                <div class="crew__content">
+                  <h3 class="crew__commander-text">Commander</h3>
+                  <h1 class="crew__heading">Douglas Hurley</h1>
+                  <p class="crew__text">
+                    Douglas Gerald Hurley is an American engineer, former Marine
+                    Corps pilot and former NASA astronaut. He launched into
+                    space for the third time as commander of Crew Dragon Demo-2.
+                  </p>
+                </div>
+                <div class="crew__imgSide">
+                  <img src="./assets/anoushen.png" alt="old" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+          renderBullet: function (index, className) {
+            return '<span class="' + className + '">' + "</span>";
+          },
+        },
+      });
+    </script>
   </body>
 </html>
