mobile responsive added

--- a/crew.html
+++ b/crew.html
@@ -16,24 +16,36 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="crew">
       <nav class="navbar">
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a class="navbar__link" href="/index.html">00 HOME</a>
+            <a class="navbar__link" href="/index.html">HOME</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="/destination.html">01 DESTINATION</a>
+            <a class="navbar__link" href="/destination.html">DESTINATION</a>
           </li>
           <li class="navbar__item">
             <a class="navbar__link navbar__link_underline" href="/crew.html"
-              >02 CREW</a
+              >CREW</a
             >
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="/technology.html">03 TECHNOLOGY</a>
+            <a class="navbar__link" href="/technology.html">TECHNOLOGY</a>
           </li>
         </ul>
       </nav>
@@ -53,7 +65,7 @@
                   </p>
                 </div>
                 <div class="crew__imgSide">
-                  <img src="./assets/old.png" alt="old" />
+                  <img src="./assets/old.png" width="100%" alt="old" />
                 </div>
               </div>
             </div>
@@ -69,7 +81,7 @@
                   </p>
                 </div>
                 <div class="crew__imgSide">
-                  <img src="./assets/mark.png" alt="old" />
+                  <img src="./assets/mark.png" width="100%" alt="old" />
                 </div>
               </div>
             </div>
@@ -85,7 +97,7 @@
                   </p>
                 </div>
                 <div class="crew__imgSide">
-                  <img src="./assets/victor.png" alt="old" />
+                  <img src="./assets/victor.png" width="100%" alt="old" />
                 </div>
               </div>
             </div>
@@ -101,7 +113,7 @@
                   </p>
                 </div>
                 <div class="crew__imgSide">
-                  <img src="./assets/anoushen.png" alt="old" />
+                  <img src="./assets/anoushen.png" width="100%" alt="old" />
                 </div>
               </div>
             </div>
