--- a/technology.html
+++ b/technology.html
@@ -18,25 +18,31 @@
       href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="technology">
       <nav class="navbar">
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a class="navbar__link" href="/index.html">00 HOME</a>
+            <a class="navbar__link" href="/index.html">HOME</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="/destination.html">01 DESTINATION</a>
+            <a class="navbar__link" href="/destination.html">DESTINATION</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="/crew.html">02 CREW</a>
+            <a class="navbar__link" href="/crew.html">CREW</a>
           </li>
           <li class="navbar__item">
             <a
               class="navbar__link navbar__link_underline"
               href="/technology.html"
-              >03 TECHNOLOGY</a
+              >TECHNOLOGY</a
             >
           </li>
         </ul>
@@ -90,18 +96,21 @@
           </div>
           <div class="technology__image-side">
             <img
+              width="100%"
               src="./assets/rocket.png"
               class="active"
               alt="rocket"
               id="image"
             />
             <img
+              width="100%"
               src="./assets/space-port.png"
               class=""
               alt="rocket"
               id="image"
             />
             <img
+              width="100%"
               src="./assets/space-capsule.png"
               class=""
               alt="rocket"
