--- a/destination.html
+++ b/destination.html
@@ -12,26 +12,38 @@
       href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="destination">
       <nav class="navbar">
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a class="navbar__link" href="/index.html">00 HOME</a>
+            <a class="navbar__link" href="/index.html">HOME</a>
           </li>
           <li class="navbar__item">
             <a
               class="navbar__link navbar__link_underline"
               href="/destination.html"
-              >01 DESTINATION</a
+              >DESTINATION</a
             >
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="/crew.html">02 CREW</a>
+            <a class="navbar__link" href="/crew.html">CREW</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="/technology.html">03 TECHNOLOGY</a>
+            <a class="navbar__link" href="/technology.html">TECHNOLOGY</a>
           </li>
         </ul>
       </nav>
@@ -47,24 +59,28 @@
                   <!-- inner container (required) -->
                   <div class="atropos-inner">
                     <img
+                      width="100%"
                       src="./assets/moon.png"
                       class="active"
                       alt="moon"
                       id="planet"
                     />
                     <img
+                      width="100%"
                       src="./assets/mars.png"
                       class=""
                       alt="moon"
                       id="planet"
                     />
                     <img
+                      width="100%"
                       src="./assets/europa.png"
                       alt="mars"
                       class=""
                       id="planet"
                     />
                     <img
+                      width="100%"
                       src="./assets/titan.png"
                       class=""
                       alt="moon"
@@ -79,10 +95,12 @@
           </div>
           <div class="pick-destination__contentSide">
             <div class="tab-box">
-              <button class="tab-box__tab active" id="tab">MOON</button>
-              <button class="tab-box__tab" id="tab">MARS</button>
-              <button class="tab-box__tab" id="tab">EUROPA</button>
-              <button class="tab-box__tab" id="tab">TITAN</button>
+              <div class="tab-box__tabs">
+                <button class="tab-box__tab active" id="tab">MOON</button>
+                <button class="tab-box__tab" id="tab">MARS</button>
+                <button class="tab-box__tab" id="tab">EUROPA</button>
+                <button class="tab-box__tab" id="tab">TITAN</button>
+              </div>
               <div class="tab-box__line" id="line"></div>
 
               <div class="tab-box__content active" id="content">
@@ -186,7 +204,6 @@
       const line = document.querySelector("#line");
       const allContent = document.querySelectorAll("#content");
       const planets = document.querySelectorAll("#planet");
-      console.log(planets);
 
       tabs.forEach((el, i) => {
         el.addEventListener("click", () => {
@@ -203,10 +220,6 @@
           line.style.left = el.offsetLeft + "px";
         });
       });
-
-      // function handleClick(tab) {
-      //   tab.classList.add("active");
-      // }
     </script>
   </body>
 </html>
