--- a/crew.html
+++ b/crew.html
@@ -31,6 +31,12 @@
   </head>
   <body>
     <div class="crew">
+      <div class="logo">
+        <a href="#">
+          <img src="./assets/logo.svg" alt="" />
+        </a>
+      </div>
+
       <nav class="navbar">
         <ul class="navbar__menu">
           <li class="navbar__item">
