--- a/destination.html
+++ b/destination.html
@@ -27,6 +27,12 @@
   </head>
   <body>
     <div class="destination">
+      <div class="logo">
+        <a href="#">
+          <img src="./assets/logo.svg" alt="" />
+        </a>
+      </div>
+
       <nav class="navbar">
         <ul class="navbar__menu">
           <li class="navbar__item">
