--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
   </head>
   <body>
     <div class="home">
+      <div class="logo">
+        <a href="#">
+          <img src="./assets/logo.svg" alt="" />
+        </a>
+      </div>
+
       <nav class="navbar mobile" id="mobile_menu">
         <ul class="navbar__menu">
           <li class="navbar__item">
