--- a/destination.html
+++ b/destination.html
@@ -33,7 +33,7 @@
         </a>
       </div>
 
-      <nav class="navbar">
+      <nav class="navbar" id="mobile_menu">
         <ul class="navbar__menu">
           <li class="navbar__item">
             <a class="navbar__link" href="/index.html">HOME</a>
@@ -53,6 +53,9 @@
           </li>
         </ul>
       </nav>
+      <span id="humberger">
+        <img src="./assets/toggler.svg" alt="toggler" />
+      </span>
       <div class="container">
         <h2 class="destination__title">01 Pick your destination</h2>
         <div class="pick-destination">
@@ -194,7 +197,7 @@
         </div>
       </div>
     </div>
-
+    <script src="./app.js"></script>
     <script type="module">
       import atropos from "https://cdn.jsdelivr.net/npm/atropos@1.0.2/+esm";
 
