--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </a>
       </div>
 
-      <nav class="navbar mobile" id="mobile_menu">
+      <nav class="navbar" id="mobile_menu">
         <ul class="navbar__menu">
           <li class="navbar__item">
             <a class="navbar__link navbar__link_underline" href="/index.html"
@@ -71,13 +71,6 @@
       </div>
     </div>
 
-    <script>
-      const menu = document.querySelector("#mobile_menu");
-      const menuBtn = document
-        .querySelector("#humberger")
-        .addEventListener("click", (e) => {
-          menu.classList.toggle("mobile");
-        });
-    </script>
+    <script src="./app.js"></script>
   </body>
 </html>
